# pg_ais

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  docker-compose.yml  pg_ais.control
benchmark/: pg_ais_bench.c
docker/: Dockerfile  init.sql
docs/: ADMIN.md  DEVELOPER.md  HOWTO.md  INSTALL.md  JUSTIFICATION.md  METRICS.md  deduplication.md  getting_started.md  indexing.md  integration.md  usage_examples.md
results/: pg_ais_regression.out
scripts/: gen_payload_tests.py  test_all.sh
sql/: pg_ais--0.1.sql  pg_ais--0.2.sql
sql/expected/: pg_ais_regression.out
sql/results/: pg_ais_regression.out
sql/sql/: pg_ais_regression.sql
src/: ais_core.c  ais_core.h  bitfield.c  bitfield.h  parse_ais.c  parse_ais.h  parse_ais_msg.c  parse_ais_msg.h  parse_ais_result.h  pg_ais.c  pg_ais.h  pg_ais_core.c  pg_ais_metrics.c  pg_ais_metrics.h  shared_ais_utils.c  shared_ais_utils.h
test/: ais_test_payloads.txt  auto_test_payloads.c  pg_ais_indexes.sql  pg_ais_regression.out  pg_ais_regression.sql  test_pg_ais.c  test_pg_ais.sql
